# virtual-bus

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  initiator-cli.cpp  initiator.cpp  initiator.hpp  magic.hpp  network_io.cpp  network_io.hpp  protocol.cpp  protocol.hpp  responder-cli.cpp  responder.cpp  responder.hpp
